Fix project directory setting

--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,8 @@
 APPLICATION_TYPE=symfony
 
 # Project Information
-PROJECT_NAME=project    # This will be the directory that the code is stored in.
+# This will be the directory that the code is stored in.
+PROJECT_NAME=project
 DOMAIN_NAME=symfony.dev
 
 # The name of the directory where web files are stored.
