Add user name and email for git

--- a/.env.dev
+++ b/.env.dev
@@ -31,3 +31,7 @@ SSH_PUBLIC_PORT=2222
 CHAR_SET_SERVER=utf8mb4
 COLLATION_SERVER=utf8mb4_unicode_ci
 DEFAULT_CHAR_SET=utf8mb4
+
+# Git
+USER_EMAIL=scott@onlinespaces.com
+USER_NAME=Scott Collier
