--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -150,6 +150,7 @@ RUN git config --global user.email "${USER_EMAIL}"
 RUN git config --global user.name "${USER_NAME}"
 
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+RUN sed -i "s/#PHP_FPM_PORT#/${PHP_FPM_PORT}/g" /etc/supervisor/conf.d/supervisord.conf
 CMD ["/usr/bin/supervisord"]
 
 
