--- a/docker/php-fpm/supervisord.conf
+++ b/docker/php-fpm/supervisord.conf
@@ -13,3 +13,6 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:script_1]
+command=sed -i "s/listen = [::]:9000/listen = [::]:#PHP_FPM_PORT#/g" /usr/local/etc/php-fpm.d/zz-docker.conf
