Fix sed command to replace port for php-fpm

--- a/.env.dev
+++ b/.env.dev
@@ -15,6 +15,9 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=symfony
 MYSQL_USER=docker
 MYSQL_PASSWORD=docker
+CHAR_SET_SERVER=utf8mb4
+COLLATION_SERVER=utf8mb4_unicode_ci
+DEFAULT_CHAR_SET=utf8mb4
 
 # XDEBUG Settings
 XDEBUG_IDE_KEY=PHPSTORM
@@ -25,13 +28,9 @@ PHP_FPM_PORT=9001
 
 TIME_ZONE=/usr/share/zoneinfo/US/Central
 
+# SSH Port
 SSH_PUBLIC_PORT=2222
 
-# mysql
-CHAR_SET_SERVER=utf8mb4
-COLLATION_SERVER=utf8mb4_unicode_ci
-DEFAULT_CHAR_SET=utf8mb4
-
-# Git
-USER_EMAIL=scott@onlinespaces.com
-USER_NAME=Scott Collier
+# Git Info
+USER_EMAIL=your.email@email.com
+USER_NAME=Your Name
