--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,7 @@ version: '2'
 
 services:
     db:
-        build:
-            context: ./docker/mysql
-            args:
-                CHAR_SET_SERVER: ${CHAR_SET_SERVER}
-                COLLATION_SERVER: ${COLLATION_SERVER}
-                DEFAULT_CHAR_SET: ${DEFAULT_CHAR_SET}
+        image: mysql:5.7
         ports:
             - "3306:3306"
         restart: always
@@ -18,6 +13,7 @@ services:
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
         volumes:
             - ./data/mysql/data:/var/lib/mysql
+            - ./docker/mysql/entry-point:/docker-entrypoint-initdb.d
 
     redis:
         image: redis:alpine
