Fix mysql restarting error due to mysql.cnf configuration error

--- a/.env.dev
+++ b/.env.dev
@@ -9,6 +9,8 @@ DOMAIN_NAME=symfony.dev
 # The name of the directory where web files are stored.
 # Symfony usually is 'web' and Drupal is 'public'
 WEBSITE_DIR=web
+HTTP_PORT=80
+HTTPS_PORT=443
 
 # MYSQL Settings
 MYSQL_ROOT_PASSWORD=root
