--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     db:
         build:
             context: ./docker/mysql
+            args:
+                CHAR_SET_SERVER: ${CHAR_SET_SERVER}
+                COLLATION_SERVER: ${COLLATION_SERVER}
+                DEFAULT_CHAR_SET: ${DEFAULT_CHAR_SET}
         ports:
             - "3306:3306"
         restart: always
@@ -12,11 +16,9 @@ services:
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            CHAR_SET_SERVER: ${CHAR_SET_SERVER}
-            COLLATION_SERVER: ${COLLATION_SERVER}
-            DEFAULT_CHAR_SET: ${DEFAULT_CHAR_SET}
         volumes:
-            - ./data/mysql/data:/var/lib/mysql
+            - ./data/mysql:/var/lib/mysql
+            - ./data/mysql/logs:/var/log/mysql
 
     redis:
         image: redis:alpine
@@ -53,8 +55,8 @@ services:
                 WEBSITE_DIR: ${WEBSITE_DIR}
         restart: always
         ports:
-            - "80:80"
-            - "443:443"
+            - "${HTTP_PORT}:80"
+            - "${HTTPS_PORT}:443"
         links:
             - php-fpm
         volumes_from:
