--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,9 @@ services:
             - "${SSH_PUBLIC_PORT}:22"
         volumes:
             - ./${PROJECT_NAME}:/var/www/${PROJECT_NAME}
+            - ./project2:/var/www/project2
             - ./logs/${PROJECT_NAME}:/var/www/${PROJECT_NAME}/var/logs
+            - ./logs/project2:/var/www/project2/var/logs
         links:
             - db:mysqldb
             - redis
@@ -71,6 +73,26 @@ services:
             - ./logs/nginx:/var/log/nginx
         environment:
             - VIRTUAL_HOST=${DOMAIN_NAME}
+
+    nginx_prod:
+        build:
+            context: ./docker/nginx
+            args:
+                DOMAIN_NAME: 'project.dev'
+                PROJECT_NAME: 'project2'
+                PHP_FPM_PORT: ${PHP_FPM_PORT}
+                WEBSITE_DIR: ${WEBSITE_DIR}
+        restart: always
+        expose:
+            - "80"
+        links:
+            - php-fpm
+        volumes_from:
+            - php-fpm
+        volumes:
+            - ./logs/nginx_prod:/var/log/nginx
+        environment:
+            - VIRTUAL_HOST=project.dev
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
