Add configuration for custom phpmyadmin and elk applications

--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,9 @@ APPLICATION_TYPE=symfony
 # Project Information
 # This will be the directory that the code is stored in.
 PROJECT_NAME=project
-DOMAIN_NAME=symfony.dev
+DOMAIN_NAME=project.local
+PHPMYADMIN_DOMAIN_NAME=phpmyadmin.local
+ELK_DOMAIN_NAME=elk.local
 
 # The name of the directory where web files are stored.
 # Symfony usually is 'web' and Drupal is 'public'
