--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -139,8 +139,8 @@ EXPOSE 22 ${PHP_FPM_PORT} ${XDEBUG_REMOTE_PORT}
 
 WORKDIR /var/www/${PROJECT_NAME}
 
-RUN git config --global --system user.email "${USER_EMAIL}"
-RUN git config --global --system user.name "${USER_NAME}"
+RUN git config --system user.email "${USER_EMAIL}"
+RUN git config --system user.name "${USER_NAME}"
 
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 RUN sed -i "s/#PHP_FPM_PORT#/${PHP_FPM_PORT}/g" /etc/supervisor/conf.d/supervisord.conf
