Add config for mysql port

--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,10 @@ APPLICATION_TYPE=symfony
 
 # Project Information
 # This will be the directory that the code is stored in.
+# If you change this value, you also need to change the location in the logstash.conf file
 PROJECT_NAME=project
+
+# Domains
 DOMAIN_NAME=project.local
 PHPMYADMIN_DOMAIN_NAME=phpmyadmin.local
 ELK_DOMAIN_NAME=elk.local
@@ -19,9 +22,7 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=symfony
 MYSQL_USER=docker
 MYSQL_PASSWORD=docker
-CHAR_SET_SERVER=utf8mb4
-COLLATION_SERVER=utf8mb4_unicode_ci
-DEFAULT_CHAR_SET=utf8mb4
+MYSQL_PORT=3306
 
 # XDEBUG Settings
 XDEBUG_IDE_KEY=PHPSTORM
@@ -30,6 +31,7 @@ XDEBUG_REMOTE_PORT=9000
 # PHP-FPM. This should be different from xdebug
 PHP_FPM_PORT=9001
 
+# Timezone
 TIME_ZONE=/usr/share/zoneinfo/US/Central
 
 # SSH Port
