--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
                 COLLATION_SERVER: ${COLLATION_SERVER}
                 DEFAULT_CHAR_SET: ${DEFAULT_CHAR_SET}
         ports:
-            - "3306:3306"
+            - "${MYSQL_PORT}:3306"
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
