Rename db to mysql in preparation for adding mariadb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 
 services:
-    db:
+    mysql:
         build:
             context: ./docker/mysql
             args:
@@ -41,7 +41,7 @@ services:
             - ./${PROJECT_NAME}:/var/www/${PROJECT_NAME}
             - ./logs/${PROJECT_NAME}:/var/www/${PROJECT_NAME}/var/logs
         links:
-            - db:mysqldb
+            - mysql
             - redis
 
     nginx-proxy:
@@ -77,7 +77,7 @@ services:
         expose:
             - "80"
         links:
-            - db:mysqldb
+            - mysql
         environment:
             - VIRTUAL_HOST=${PHPMYADMIN_DOMAIN_NAME}
 
