Move mysql settings to separate file

--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -5,10 +5,9 @@ ARG CHAR_SET_SERVER
 ARG COLLATION_SERVER
 ARG DEFAULT_CHAR_SET
 
-RUN { \
-      echo "[mysqld]"; \
-      echo "character-set-server=${CHAR_SET_SERVER}"; \
-      echo "collation-server=${COLLATION_SERVER}"; \
-      echo "[client]"; \
-      echo "default-character-set=${DEFAULT_CHAR_SET}"; \
-} >> /etc/mysql/mysql.conf.d/zz-mysqld.cnf
+COPY zz-mysqld.cnf /etc/mysql/mysql.conf.d
+
+sed -i "s/#CHAR_SET_SERVER#/${CHAR_SET_SERVER}/g" /etc/mysql/mysql.conf.d/zz-mysqld.cnf && \
+sed -i "s/#COLLATION_SERVER#/${COLLATION_SERVER}/g" /etc/mysql/mysql.conf.d/zz-mysqld.cnf && \
+sed -i "s/#DEFAULT_CHAR_SET#/${DEFAULT_CHAR_SET}/g" /etc/mysql/mysql.conf.d/zz-mysqld.cnf
+
