--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Scott Collier <scott@onlinespaces.com>
 ARG CHAR_SET_SERVER
 ARG COLLATION_SERVER
 ARG DEFAULT_CHAR_SET
+ARG MYSQL_PORT
 
 COPY zz-mysqld.cnf /etc/mysql/mysql.conf.d
 
@@ -11,3 +12,4 @@ RUN sed -i "s/#CHAR_SET_SERVER#/${CHAR_SET_SERVER}/g" /etc/mysql/mysql.conf.d/zz
     sed -i "s/#COLLATION_SERVER#/${COLLATION_SERVER}/g" /etc/mysql/mysql.conf.d/zz-mysqld.cnf && \
     sed -i "s/#DEFAULT_CHAR_SET#/${DEFAULT_CHAR_SET}/g" /etc/mysql/mysql.conf.d/zz-mysqld.cnf
 
+EXPOSE ${MYSQL_PORT}
