Use docker-entrypoint.sh to start nginx.
This is preparation for adding script code.

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -45,4 +45,8 @@ RUN sed -i "s/#DOMAIN_NAME#/${DOMAIN_NAME}/g" /etc/nginx/sites-enabled/${PROJECT
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /var/cache/apk/*
 
 EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
+
+COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+CMD ["/usr/local/bin/docker-entrypoint.sh"]
