Break out php into 5.6 and 7.
Currenty, 5.6 is not working properly but needed to commit before holidays.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
     php-fpm:
         build:
-            context: ./docker/php-fpm
+            context: ./docker/php-fpm/5.6
             args:
                 PROJECT_NAME: ${PROJECT_NAME}
                 XDEBUG_IDE_KEY: ${XDEBUG_IDE_KEY}
