--- a/docker/php-fpm/5.6/supervisord.conf
+++ b/docker/php-fpm/5.6/supervisord.conf
@@ -1,11 +1,14 @@
 [supervisord]
 nodaemon=true
 
+[program:script_1]
+command=sed -i "s/listen = \[\:\:\]\:9000/listen = \[\:\:\]\:#PHP_FPM_PORT#/g" /usr/local/etc/php-fpm.d/zz-docker.conf
+
 [program:sshd]
 command=/usr/sbin/sshd -D
 
 [program:php-fpm]
-command=/usr/local/sbin/php-fpm -c /etc/php5/conf.d/php-fpm.conf
+command=/usr/local/sbin/php-fpm -c /usr/local/etc/php/conf.d/php-fpm.conf
 autostart=true
 autorestart=true
 priority=5
