--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,6 @@
 # The type of application. Currently, this is not used.
+# Determines which nginc conf file is used
+# Valid values:  symfony or drupal8
 APPLICATION_TYPE=symfony
 
 # Project Information
