DU8-1 Configure for php version

--- a/.env.dev
+++ b/.env.dev
@@ -35,7 +35,8 @@ XDEBUG_IDE_KEY=PHPSTORM
 XDEBUG_REMOTE_PORT=9000
 
 # PHP-FPM. This should be different from xdebug
-PHP_FPM_PORT=9001
+PHP_FPM_PORT=9005
+PHP_VERSION=5.6
 
 # Timezone
 TIME_ZONE=/usr/share/zoneinfo/US/Central
