Add ports for browsersync and patternlab

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,13 @@ services:
             - "${PHP_FPM_PORT}:${PHP_FPM_PORT}"
             - "${XDEBUG_REMOTE_PORT}:${XDEBUG_REMOTE_PORT}"
             - "${SSH_PUBLIC_PORT}:22"
+            - "8088:8088"
+            - "3001:3001"
+            - "3050:3050"
         volumes:
             - ./${PROJECT_NAME}:/var/www/${PROJECT_NAME}
             - ./logs/${PROJECT_NAME}:/var/www/${PROJECT_NAME}/var/logs
+            - ./drupal-lab:/var/www/html
         links:
             - mysqldb
             - redis
