Make php version configurable

--- a/.env.dev
+++ b/.env.dev
@@ -36,9 +36,10 @@ XDEBUG_REMOTE_PORT=9000
 
 # PHP-FPM. This should be different from xdebug
 PHP_FPM_PORT=9001
+PHP_VERSION=7.0
 
 # Timezone
-TIME_ZONE=/usr/share/zoneinfo/US/Central
+TIME_ZONE=US/Central
 
 # SSH Port
 SSH_PUBLIC_PORT=2222
